Additional update (amended test for "headless" systems): - Fixed an unwanted System.out in ListPropertyAccessor (should probably be   fixed in the origin branch even if this PR is never merged). - Refactor to place all code back in the main package (to allow   package-level access control) - Renamed OgnlRuntimeMethodBlocking to OgnlRuntimeMethodBlocker. - Added optional "per-thread" SecurityManager implementation that can be   used/enabled if desired using a JVM option "-Dognl.enableSecurityManager=true".   It also supports a slightly stricter mode using an additional option   "-Dognl.securityManagerStrictMode=true".   Note: It does not purport to be bulletproof, but aims to provide some   protection while minimizing interference to other threads.